Changing directories of important pages

--- a/src/pages/table-backend-page/table-page.scss
+++ b/src/pages/table-backend-page/table-page.scss
@@ -12,7 +12,7 @@
   background: rgba(0, 0, 0, 0.04);
 }
 .drawer-space {
-  background: url('../../../images/space.jpg');
+  background: url('../../images/space.jpg');
   width: 350px;
   height: 100%;
   div {
