--- a/src/pages/register-page/register.scss
+++ b/src/pages/register-page/register.scss
@@ -15,6 +15,21 @@
     margin-top: 8px;
   }
 }
+.button_language-box {
+  display: flex;
+  flex-direction: column;
+  margin-right: 96%;
+}
+.header__button_language {
+  padding-left: 20px;
+}
+.button_language {
+  width: 50px;
+  height: 20px;
+  background: #2c2c2c;
+  color: #fafafa;
+  border-radius: 10px;
+}
 ///////////////////media
 //*-------------------------------* 1440px *-------------------------------*\\
 @media (max-width: 1440px) {
